--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
 h1 {
     text-align: center;
     font-size: 4rem;
+    margin: -5px 0px -20px 0px;
 }
 
 .choice {
@@ -53,14 +54,29 @@ h1 {
     min-height: 150px;
     max-height: 200px;
     width: 100vw;
-    background-color: black;
     margin-bottom: 30px;
 }
 
 #result-div {
-    height: 7vh;
+    height: 10vh;
     min-height: 50px;
-    max-height: 60px;
+    max-height: 130px;
     width: 100vw;
-    background-color: green;
+}
+
+#result-div > p {
+    text-align: center;
+    font-size: 50px;
+}
+
+.score {
+    height: 100%;
+    width: 30%;
+    border: 5px solid black;
+}
+
+@media (max-width: 770px) {
+    #result-div {
+        height: 20vh;
+    }
 }
