--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@ body {
 
 h1 {
     text-align: center;
-    font-size: 4rem;
-    margin: -5px 0px -20px 0px;
+    font-size: 5rem;
+    margin: -5px 0px -40px 0px;
 }
 
 .choice {
@@ -49,19 +49,20 @@ h1 {
 
 #score-div {
     display: flex;
-    justify-content: space-around;
-    height: 25vh;
+    justify-content: space-evenly;
+    height: 30vh;
     min-height: 150px;
     max-height: 200px;
     width: 100vw;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 
 #result-div {
     height: 10vh;
-    min-height: 50px;
-    max-height: 130px;
+    min-height: 60px;
+    max-height: 100px;
     width: 100vw;
+    margin-bottom: 20px;
 }
 
 #result-div > p {
@@ -69,14 +70,29 @@ h1 {
     font-size: 50px;
 }
 
-.score {
-    height: 100%;
+.score-flex {
     width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px
+}
+
+.score {
+    height: 80%;
+    width: 100%;
     border: 5px solid black;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: white;
+    font-size: 300%;
 }
 
 @media (max-width: 770px) {
     #result-div {
         height: 20vh;
+        min-height: 125px;
     }
 }
