--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 body {
-    background-color: #BC986A;
+    background-color: #7395AE;
     font-family: impact;
 }
 
 h1 {
     text-align: center;
     font-size: 5rem;
-    margin: -5px 0px -40px 0px;
+    margin: 10px 0px -40px 0px;
 }
 
 .choice {
@@ -20,11 +20,12 @@ h1 {
     max-height: 150px;
     font-family: impact;
     font-size: 1.9rem;
-    background-color: #FBEEC1;
+    background-color: #557A95;
+    border: 5px solid black;
 }
 
 .choice:hover {
-    background-color: #DAAD86;
+    background-color: #ADD8E6;
 }
 
 .button-div {
@@ -37,6 +38,7 @@ h1 {
 
 .choice > img {
     height: 50%;
+    width: 90px;
 }
 
 .reset {
@@ -54,7 +56,7 @@ h1 {
     min-height: 150px;
     max-height: 200px;
     width: 100vw;
-    margin-bottom: 50px;
+    margin-bottom: 75px;
 }
 
 #result-div {
@@ -62,12 +64,14 @@ h1 {
     min-height: 60px;
     max-height: 100px;
     width: 100vw;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
 }
 
 #result-div > p {
     text-align: center;
     font-size: 50px;
+    border: 5px solid black;
+    background-color: #ADD8E6;
 }
 
 .score-flex {
@@ -76,7 +80,7 @@ h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 20px
+    font-size: 30px;
 }
 
 .score {
